(feat): show validation errors on incorrect form submission

--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -75,6 +75,7 @@ body {
   /* Vertically center the text there */
 }
 
+/* 
 input.form-control {
-  margin-bottom: 10px !important;
-}
+  margin-bottom: 20px !important;
+} */
