--- a/Pages/NewToDoItem.cshtml
+++ b/Pages/NewToDoItem.cshtml
@@ -5,10 +5,16 @@
 
 <h2>Create a new To-DO Item</h2>
 
-<div>
-  <form method="post">
+<form method="post">
+  <div class="form-group row">
+    <label asp-for="ToDoItem.name">Name</label>
     <input class="form-control" placeholder="Item Name" asp-for="ToDoItem.name"/>
-    <input class="form-control" placeholder="Item Description" asp-for="ToDoItem.description" />
+    <span asp-validation-for="ToDoItem.name" class="text-danger"></span>
+  </div>
+  <div class="form-group row">
+    <label asp-for="ToDoItem.description">Description</label>
+    <input class="form-control" placeholder="Item Description" asp-for="ToDoItem.description"/>
+    <span asp-validation-for="ToDoItem.description" class="text-danger"></span>
+  </div>
     <button type="submit" class="btn btn-primary">Add Item</button>
-  </form>
-</div>
+</form>
