--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -76,5 +76,7 @@ body {
 }
 
 .flex-container {
-  display: flex;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-row-gap: 30px;
 }
