--- a/Pages/NewToDoItem.cshtml
+++ b/Pages/NewToDoItem.cshtml
@@ -5,7 +5,7 @@
 
 <h2>Create a new To-DO Item</h2>
 
-<form method="post">
+<form method="post" style="margin-bottom: 10px;">
   <div class="form-group row">
     <label asp-for="ToDoItem.name">Name</label>
     <input class="form-control" placeholder="Item Name" asp-for="ToDoItem.name"/>
@@ -18,3 +18,5 @@
   </div>
     <button type="submit" class="btn btn-primary">Add Item</button>
 </form>
+
+<a asp-page="ViewToDoItems">View Your TODOs</a>
