--- a/Pages/NewToDoItem.cshtml
+++ b/Pages/NewToDoItem.cshtml
@@ -10,13 +10,13 @@
 <form id="addItem" method="post" style="margin-bottom: 10px;">
   <div class="form-group row">
     <label asp-for="ToDoItem.name">Name</label>
-    <input class="form-control" placeholder="Item Name" asp-for="ToDoItem.name"/>
+    <input class="form-control" id="name" placeholder="Item Name" asp-for="ToDoItem.name"/>
     <span asp-validation-for="ToDoItem.name" class="text-danger"></span>
   </div>
   <div class="form-group row">
     <label asp-for="ToDoItem.description">Description</label>
-    <input class="form-control" placeholder="Item Description" asp-for="ToDoItem.description"/>
+    <input class="form-control" id="description" placeholder="Item Description" asp-for="ToDoItem.description"/>
     <span asp-validation-for="ToDoItem.description" class="text-danger"></span>
   </div>
-    <button type="submit" class="btn btn-primary">Add Item</button>
+    <button type="submit" id="addItemButton" class="btn btn-primary">Add Item</button>
 </form>
