--- a/Pages/ViewToDoItems.cshtml
+++ b/Pages/ViewToDoItems.cshtml
@@ -8,7 +8,7 @@
 <div class="flex-container" style="margin-bottom: 10px;">
   @{
       foreach(var item in @Model.ToDoItems) {
-          <div class="card" style="width: 18rem;">
+          <div class="card defdontexist" style="width: 18rem;">
             <div class="card-body">
               <h5 class="card-title">@item.name</h5>
               <h6 class="card-subtitle mb-2 text-muted">Description</h6>
